# clucene-bindings

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.c.inc  LICENSE.py.inc  README.rst
cmake/: UseSWIG.cmake
defs/: LuceneCollections.i  LuceneMaps.i  LuceneSets.i  NonSumoExcludes.i  clucene-bindings.i  lucene_analysis.i  lucene_document.i  lucene_fwd.i  lucene_index.i  lucene_queryparser.i  lucene_search.i  lucene_shared.i  lucene_store.i  lucene_util.i
